--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
             "email": "stof@notk.org"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/yassinehamouten/DoctrineExtensions.git"
+        }
+    ],
     "require": {
         "php": "^7.1.3 || ^8.0",
         "symfony/config": "^4.4 || ^5.2 || ^6.0",
